--- a/src/app/modules/chess-board/chess-board.component.css
+++ b/src/app/modules/chess-board/chess-board.component.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column-reverse;
-    width: 480px;
+    max-width: 480px;
     height: 480px;
 }
 
@@ -59,7 +59,7 @@
 }
 
 .piece {
-    width: 50px;
+    width: 40px;
 }
 
 .selected-square {
