--- a/src/app/modules/chess-board/chess-board.component.css
+++ b/src/app/modules/chess-board/chess-board.component.css
@@ -51,11 +51,11 @@
 }
 
 .dark {
-    background-color: #779AAF
+    background-color: #b58863
 }
 
 .light {
-    background-color: #D9E4E8;
+    background-color: #e6d2b5;
 }
 
 .piece {
