fix: play with computer

--- a/src/app/modules/play-against-computer-dialog/play-against-computer-dialog.component.html
+++ b/src/app/modules/play-against-computer-dialog/play-against-computer-dialog.component.html
@@ -9,8 +9,8 @@
     </div>
 
     <div class="choose-side">
-        <img src="assets/pieces/white king.svg" class="king-img" draggable="false" (click)="play('w')">
-        <img src="assets/pieces/black king.svg" class="king-img" draggable="false" (click)="play('b')">
+        <img src="assets/pieces/wK.svg" class="king-img" draggable="false" (click)="play('w')">
+        <img src="assets/pieces/bK.svg" class="king-img" draggable="false" (click)="play('b')">
     </div>
 </mat-dialog-content>
 
